--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,10 @@
   "author": "S.Skaugvoll",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
-    "mongoose": "^4.6.7"
+    "mongoose": "^4.6.7",
+    "morgan": "^1.7.0"
   }
 }
