--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "react": "^15.3.2",
-
+    "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
     "whatwg-fetch": "^1.0.0"
   },
